# pwndepot

./: .dockerignore  .env.services.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  docker-compose.ci.yml  docker-compose.yaml  nginx.conf  sonar-project.properties  stackhawk.yml
.github/: CONTRIBUTING.md  semantic.yml
app/backend/: .env.ci  .env.example  Dockerfile  README.md  alembic.ini  create_db.py  limiter.py  main.py  manage.py  pyproject.toml  ruff.toml  settings.py
app/backend/alembic/: env.py
app/backend/alembic/versions/: 01987ddd48ba_add_refresh_tokens.py  01ed7ccf231b_add_mfa.py  10589a61175f_new_init.py  13a7e950dc6a_add_ctf_state.py  29cdc4e8d424_add_email_verification_fields.py  2fc73c4288a3_add_team_password.py  49189b8c0233_added_team_flag.py  4d678294dcfa_add_security_devices_table.py  6fc793797c30_fix_migration.py  7276900d9761_init_new.py  814bdadada63_add_mfa_backup_codes_table.py  a8771c1010cb_add_user_status.py  b9d4869aea72_add_challenge_category_author_defaults.py  c4e0ff78fe84_add_mfa_backup_codes.py  e22ba8135c85_add_pause_column_to_ctf_state.py  f0b5f1f6c9c8_initial_migration_create_user_table.py  f45996671e96_add_all_needed_tables.py
app/backend/api/: default_router.py
app/backend/api/v1/: deps.py  router.py
app/backend/api/v1/endpoints/: challenges.py  contact.py  ctf.py  ctf_events.py  mfa.py  teams.py  users.py  utils.py
app/backend/config/: redis.py  settings.py
app/backend/db/: base.py  models.py  session.py
app/backend/middleware/: ctf_gate.py  origin_check.py
app/backend/models/db/: session.py  users.py
app/backend/models/schema/: base.py  tokens.py  users.py
app/backend/repository/: base.py  challenges.py  contact.py  ctf_state.py  teams.py  users.py
app/backend/schema/: admin.py  base.py  challenges.py  contact.py  ctf.py  mfa.py  teams.py  tokens.py  users.py
app/backend/schema/validators/: password.py
app/backend/scripts/: cleanup_unverified_users.py  confirm_k8s.py  manage.py  populate_test_db.py
app/backend/security/: exceptions.py  geo_ip.py  mfa_backup_codes.py  password.py  refresh_tokens.py  security_events.py  tokens.py
app/backend/tests/: conftest.py  test_challenges.py  test_users.py
app/backend/utils/: admin_mfa.py  cookies.py  ctf_redis.py  device_fingerprint.py  email_validation.py  exceptions.py  flag_store.py  instance_limiter.py  instance_token_store.py  k8s_manager.py  limiter.py  limiter_keys.py  logging_config.py  mail.py  mail_template.py  mailer.py  redis_bus.py  redis_sse_listener.py  security_mailer.py  sse_bus.py  team_instance_store.py
k8s/: alembic-migration-job.yaml  argocd-app.yaml  backend-deployment.yaml  backend-rbac.yaml  challenge-rewrite-middleware.yaml  challenge-rewrite-sse.yaml  ingress.yaml  (+10 more)
(+132 files in other folders)
